--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,15 +39,17 @@ android {
         primary {
             dimension 'color'
             manifestPlaceholders = [
-                    appIcon: "@drawable/primary_flavour.png"
+                    appIcon: "@drawable/icon_primary"
             ]
+            applicationId "com.app.primarycolor"
             signingConfig signingConfigs.dev
         }
         accent {
             dimension 'color'
             manifestPlaceholders = [
-                    appIcon: "@drawable/accent_flavour.png.png"
+                    appIcon: "@drawable/accent_icon"
             ]
+            applicationId "com.app.accentcolor"
             signingConfig signingConfigs.dev
         }
     }
@@ -65,9 +67,14 @@ android {
         androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
 
-        implementation 'android.arch.navigation:navigation-fragment:1.0.0'
         implementation 'com.squareup.retrofit2:retrofit:2.9.0'
         implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+        implementation "androidx.navigation:navigation-fragment-ktx:2.3.1"
+        implementation "androidx.navigation:navigation-ui-ktx:2.3.1"
+
+        // Dynamic Feature Module Support
+        implementation "androidx.navigation:navigation-dynamic-features-fragment:2.3.1"
 
 
     }
@@ -77,4 +84,5 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.google.android.material:material:1.2.1'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 }
